# slice-find

./: Cargo.toml  LICENSE.txt
src/: kmp.rs  lib.rs  raita.rs  simple.rs  test.rs
